[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ryzen-tctl"
version = "1.0.0"
authors = [
    { name="Derek J. Clark", email="derekjohn.clark@gmail.com" },
]
description = " Python module that monotors tctl on Ryzen APUs and ensures it is set to a reasoanble default using ryzenadj-controller"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/chimeraos/device-quirks"
"Bug Tracker" = "https://github.com/chimeraos/device-quirks/issues"

[tool.setuptools.packages.find]
include = ["ryzen_tctl"]

[project.scripts]
ryzen-tctl = "ryzen_tctl.ryzen_tctl:main"
